Closed
Bug 1606091
Opened 6 years ago
Closed 6 years ago
Intermittent comm/mailnews/imap/test/unit/test_imapUrls.js | application crashed [@ nsMsgMailSession::AddFolderListener(nsIFolderListener *,unsigned int)]
Categories
(MailNews Core :: Networking: IMAP, defect)
MailNews Core
Networking: IMAP
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 75.0
People
(Reporter: intermittent-bug-filer, Assigned: mkmelin)
Details
(Keywords: crash, intermittent-failure, leave-open)
Crash Data
Attachments
(1 file)
|
2.04 KB,
patch
|
benc
:
review+
|
Details | Diff | Splinter Review |
Filed by: mkmelin+mozilla [at] iki.fi
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=282739150&repo=comm-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/e7uXFJ12TEWOJGlXEoa9Dw/runs/0/artifacts/public/logs/live_backing.log
| Assignee | ||
Comment 1•6 years ago
|
||
###!!! ASSERTION: tried to add duplicate listener: 'index == size_t(-1)', file z:/build/build/src/comm/mailnews/base/src/nsMsgMailSession.cpp
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 7•6 years ago
|
||
Maybe this could help.
Assignee: nobody → mkmelin+mozilla
Attachment #9128102 -
Flags: review?(benc)
Comment 8•6 years ago
|
||
Comment on attachment 9128102 [details] [diff] [review]
bug1606091_crash_at_AddFolderListener.patch
Review of attachment 9128102 [details] [diff] [review]:
-----------------------------------------------------------------
Typo in commit message ("listerner"), but patch itself looks sensible to me.
Attachment #9128102 -
Flags: review?(benc) → review+
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Updated•6 years ago
|
Comment 10•6 years ago
|
||
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/bb6db0e80a06
make sure to remove folder listener before adding another one, to avoid crash [@ nsMsgMailSession::AddFolderListener(nsIFolderListener *,unsigned int)]. r=benc DONTBUILD
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 12•6 years ago
|
||
Looks like it worked.
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•