Bug 1606091 - make sure to remove folder listener before adding another one, to avoid crash [@ nsMsgMailSession::AddFolderListener(nsIFolderListener *,unsigned int)]. r=benc DONTBUILD